Fixed x-axis and legend from being cut off when additional sensor is added.

--- a/src/components/app.css
+++ b/src/components/app.css
@@ -121,6 +121,7 @@ button:disabled:hover {
     display: flex;
     flex-direction: column;
     flex: 1 1;
+    margin-bottom: 8px;
     margin-top: 8px;    /* affects .app-content:max-height */
     /* 58px = .app-content:margin-top + .control-panel:flex-basis + .control-panel:margin-top */
     max-height: calc(100% - var(--app-content-unusable-vertical-height));
